[build-system]
requires = ["hatchling", "boto3", "botocore", "redis"]
build-backend = "hatchling.build"

[project]
name = "pubsublib_python_orangehealth"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Orange-Health/pubsublib-python"
Issues = "https://github.com/Orange-Health/pubsublib-python/issues"